@@ -31,7 +31,6 @@ import org.dcache.srm.scheduler.State;
 import org.dcache.srm.scheduler.IllegalStateTransition;
 import org.dcache.srm.scheduler.SchedulerFactory;
 import org.dcache.srm.v2_2.ArrayOfTSURLReturnStatus;
-import org.apache.axis.types.URI; 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.dcache.srm.SRM;
@@ -39,8 +38,10 @@ import java.util.Set;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.HashMap;
-import org.dcache.srm.request.sql.DatabaseFileRequestStorage;
+import java.net.URI;
+import java.net.URISyntaxException;
 import org.apache.axis.types.URI.MalformedURIException;
+import org.dcache.srm.request.sql.DatabaseFileRequestStorage;
 import java.sql.SQLException;
 import org.dcache.srm.SRMInvalidRequestException;
 
@@ -50,11 +51,11 @@ import org.dcache.srm.SRMInvalidRequestException;
  * @author  timur
  */
 public class SrmReleaseFiles {
-    
-    
-    private static final Logger logger= 
+
+
+    private static final Logger logger=
         LoggerFactory.getLogger(SrmReleaseFiles.class.getName()) ;
-    
+
     private final static String SFN_STRING="?SFN=";
     AbstractStorageElement storage;
     SrmReleaseFilesRequest srmReleaseFilesRequest;
@@ -67,7 +68,7 @@ public class SrmReleaseFiles {
     private int max_results_num;
     int numOfLevels =0;
     SRM srm;
-    
+
     /** Creates a new instance of SrmReleaseFiles */
     public SrmReleaseFiles(SRMUser user,
             RequestCredential credential,
@@ -84,7 +85,7 @@ public class SrmReleaseFiles {
         this.configuration = srm.getConfiguration();
         this.srm = srm;
     }
-    
+
     boolean longFormat =false;
     String servicePathAndSFNPart = "";
     int port;
@@ -93,9 +94,13 @@ public class SrmReleaseFiles {
         if(response != null ) return response;
         try {
             response = srmReleaseFiles();
-        } catch(MalformedURIException mue) {
-            logger.debug(" malformed uri : "+mue.getMessage());
-            response = getFailedResponse(" malformed uri : "+mue.getMessage(),
+        } catch(MalformedURIException e) {
+            logger.debug(" malformed uri : "+e.getMessage());
+            response = getFailedResponse(" malformed uri : "+e.getMessage(),
+                    TStatusCode.SRM_INVALID_REQUEST);
+        } catch(URISyntaxException e) {
+            logger.debug(" malformed uri : "+e.getMessage());
+            response = getFailedResponse(" malformed uri : "+e.getMessage(),
                     TStatusCode.SRM_INVALID_REQUEST);
         } catch(SQLException sqle) {
             logger.error(sqle.toString());
@@ -111,20 +116,30 @@ public class SrmReleaseFiles {
             logger.error("Illegal State Transition : " +ist.getMessage());
             response = getFailedResponse("Illegal State Transition : " +ist.getMessage());
         }
-        
+
         return response;
     }
-    
+
+    private static URI[] toUris(org.apache.axis.types.URI[] uris)
+        throws URISyntaxException
+    {
+        URI[] result = new URI[uris.length];
+        for (int i = 0; i < uris.length; i++) {
+            result[i] = new URI(uris[i].toString());
+        }
+        return result;
+    }
+
     public static final SrmReleaseFilesResponse getFailedResponse(String error) {
         return getFailedResponse(error,null);
     }
-    
+
     public static final SrmReleaseFilesResponse getFailedResponse(String error,TStatusCode statusCode) {
         if(statusCode == null) {
             statusCode =TStatusCode.SRM_FAILURE;
         }
         logger.error("getFailedResponse: "+error+" StatusCode "+statusCode);
- 
+
         TReturnStatus status = new TReturnStatus();
         status.setStatusCode(statusCode);
         status.setExplanation(error);
@@ -136,21 +151,22 @@ public class SrmReleaseFiles {
      * implementation of srm ls
      */
     public SrmReleaseFilesResponse srmReleaseFiles()
-    throws SRMException,MalformedURIException,
-           SQLException, IllegalStateTransition {
+        throws SRMException, URISyntaxException, MalformedURIException,
+               SQLException, IllegalStateTransition
+    {
         String requestToken = srmReleaseFilesRequest.getRequestToken();
         Long requestId = null;
-        if( requestToken != null ) {        
+        if( requestToken != null ) {
             try {
-                requestId = new Long( requestToken);
-            } 
+                requestId = Long.valueOf(requestToken);
+            }
             catch (NumberFormatException nfe){
                 return getFailedResponse(" requestToken \""+
                                          requestToken+"\"is not valid",
                                          TStatusCode.SRM_INVALID_REQUEST);
             }
-        }        
-        URI [] surls ;
+        }
+        URI[] surls;
         if(  srmReleaseFilesRequest.getArrayOfSURLs() == null ){
             if(requestToken == null) {
                 return getFailedResponse(
@@ -158,73 +174,65 @@ public class SrmReleaseFiles {
                         TStatusCode.SRM_NOT_SUPPORTED);
             }
             surls = null;
-        }  
+        }
 	else if (requestToken == null) {
-            surls = srmReleaseFilesRequest.getArrayOfSURLs().getUrlArray();
-            
+            surls = toUris(srmReleaseFilesRequest.getArrayOfSURLs().getUrlArray());
+
             return unpinDirectlyBySURLs(surls);
-            
+
         }
         else {
-            surls = srmReleaseFilesRequest.getArrayOfSURLs().getUrlArray();
+            surls = toUris(srmReleaseFilesRequest.getArrayOfSURLs().getUrlArray());
         }
-        
+
         ContainerRequest request =(ContainerRequest) ContainerRequest.getRequest(requestId);
         if(request == null) {
             if(surls != null && surls.length > 0) {
                 return unpinFilesDirectlyBySURLAndRequestId(requestId, surls);
-               
+
             } else {
                 return getFailedResponse("request for requestToken \""+
                                          requestToken+"\"is not found",
                                          TStatusCode.SRM_INVALID_REQUEST);
             }
-            
+
         }
         if ( !(request instanceof GetRequest || request instanceof BringOnlineRequest) ){
             return getFailedResponse("request for requestToken \""+
 				     requestToken+"\"is not srmPrepareToGet or srmBringOnlineRequest request",
 				     TStatusCode.SRM_INVALID_REQUEST);
         }
-        
+
         //if(request instanceof GetRequest) {
-        String surl_strings[] = null;
         if( surls == null ){
             if(request instanceof GetRequest) {
                 request.setState(State.DONE,"SrmReleaseFiles called");
             } else {
                 BringOnlineRequest bringOnlineRequest = (BringOnlineRequest)request;
-                return bringOnlineRequest.releaseFiles(null,null);
+                return bringOnlineRequest.releaseFiles(null);
             }
         } else {
-           if(surls.length == 0) {
+            if(surls.length == 0) {
                 return getFailedResponse("0 lenght SiteURLs array");
-            }
-            surl_strings = new String[surls.length];
-            for(int i = 0; i< surls.length; ++i) {
-                if(surls[i] == null) {
-                    return getFailedResponse("surls["+i+"]=null");
-                }
-                surl_strings[i] = surls[i].toString();
             }
             if(request instanceof GetRequest) {
                 for(int i = 0; i< surls.length; ++i) {
-                    FileRequest fileRequest = request.getFileRequestBySurl(surl_strings[i]);
+                    FileRequest fileRequest = request.getFileRequestBySurl(surls[i]);
                     fileRequest.setState(State.DONE,"SrmReleaseFiles called");
                 }
             } else {
                 BringOnlineRequest bringOnlineRequest = (BringOnlineRequest)request;
-                return bringOnlineRequest.releaseFiles(surls,surl_strings);
-                
+                return bringOnlineRequest.releaseFiles(surls);
+
             }
         }
-        
+
         TReturnStatus status = new TReturnStatus();
         status.setStatusCode(TStatusCode.SRM_SUCCESS);
         SrmReleaseFilesResponse srmReleaseFilesResponse = new SrmReleaseFilesResponse();
         srmReleaseFilesResponse.setReturnStatus(status);
         if( surls != null) {
-            TSURLReturnStatus[] surlReturnStatusArray =  request.getArrayOfTSURLReturnStatus(surl_strings);
+            TSURLReturnStatus[] surlReturnStatusArray =  request.getArrayOfTSURLReturnStatus(surls);
             for (TSURLReturnStatus surlReturnStatus:surlReturnStatusArray) {
                 if(surlReturnStatus.getStatus().getStatusCode() == TStatusCode.SRM_RELEASED) {
                     surlReturnStatus.getStatus().setStatusCode(TStatusCode.SRM_SUCCESS);
@@ -236,20 +244,22 @@ public class SrmReleaseFiles {
         // we do this to make the srm update the status of the request if it changed
         request.getTReturnStatus();
         return srmReleaseFilesResponse;
-        
+
     }
 
-    private SrmReleaseFilesResponse unpinFilesDirectlyBySURLAndRequestId(final Long requestId, final URI[] surls) {
-        TSURLReturnStatus[] surlReturnStatusArray = 
+    private SrmReleaseFilesResponse unpinFilesDirectlyBySURLAndRequestId(long requestId, URI[] surls)
+        throws MalformedURIException
+    {
+        TSURLReturnStatus[] surlReturnStatusArray =
             new TSURLReturnStatus[surls.length];
         int failure_num=0;
         for (int i = 0; i< surls.length; ++i) {
-           URI surl =  surls[i];
+           URI surl = surls[i];
            surlReturnStatusArray[i] = new TSURLReturnStatus();
-           surlReturnStatusArray[i].setSurl(surl);
+           surlReturnStatusArray[i].setSurl(new org.apache.axis.types.URI(surl.toString()));
             try {
                 BringOnlineFileRequest.unpinBySURLandRequestId(storage,
-                    user,requestId,surl.toString());
+                    user,requestId,surl);
                 surlReturnStatusArray[i].setStatus(
                     new TReturnStatus(TStatusCode.SRM_SUCCESS,"released"));
             }
@@ -257,10 +267,10 @@ public class SrmReleaseFiles {
                 surlReturnStatusArray[i].setStatus(
                     new TReturnStatus(TStatusCode.SRM_FAILURE,"release failed: "+e));
                 failure_num++;
-                
+
             }
         }
-        
+
         TReturnStatus status = new TReturnStatus();
         if(failure_num == 0) {
             status.setStatusCode(TStatusCode.SRM_SUCCESS);
@@ -275,39 +285,40 @@ public class SrmReleaseFiles {
                                 new ArrayOfTSURLReturnStatus(surlReturnStatusArray));
         return srmReleaseFilesResponse;
     }
-    
-   private SrmReleaseFilesResponse unpinDirectlyBySURLs(final URI[] surls) throws
-   SQLException, IllegalStateTransition, SRMInvalidRequestException {
-       //prepare initial return statuses
-       Map<URI,TSURLReturnStatus> surlsMap = 
-           new HashMap<URI,TSURLReturnStatus>();
+
+   private SrmReleaseFilesResponse unpinDirectlyBySURLs(URI[] surls)
+       throws SQLException, IllegalStateTransition, SRMInvalidRequestException,
+              MalformedURIException
+   {
+        //prepare initial return statuses
+        Map<URI,TSURLReturnStatus> surlsMap =
+            new HashMap<URI,TSURLReturnStatus>();
         for(URI surl: surls) {
             TSURLReturnStatus rs = new TSURLReturnStatus();
-            rs.setSurl(surl);
+            rs.setSurl(new org.apache.axis.types.URI(surl.toString()));
             rs.setStatus(
                 new TReturnStatus(TStatusCode.SRM_INTERNAL_ERROR,"not released"));
             surlsMap.put(surl,rs);
         }
-        
-        //try to find and relelease active get and bring online file requests 
+
+        //try to find and relelease active get and bring online file requests
         releaseFileRequestsDirectlyBySURLs(surls,surlsMap);
-        
+
         //try to unpin surls directly in the pin manager too
         unpinFilesDirectlyBySURLs(surls,surlsMap);
-        
+
         //analize the results to form SrmReleaseFilesResponse
         int failure_num=0;
-        TSURLReturnStatus[] surlReturnStatusArray = 
+        TSURLReturnStatus[] surlReturnStatusArray =
             new TSURLReturnStatus[surls.length];
         for(int i = 0; i<surls.length; i++) {
-            URI surl =  surls[i];
-            TSURLReturnStatus rs = surlsMap.get(surl);
+            TSURLReturnStatus rs = surlsMap.get(surls[i]);
             if(!rs.getStatus().getStatusCode().equals(TStatusCode.SRM_SUCCESS)) {
                 failure_num++;
             }
             surlReturnStatusArray[i] = rs;
         }
-        
+
         TReturnStatus status = new TReturnStatus();
         if(failure_num == 0) {
             status.setStatusCode(TStatusCode.SRM_SUCCESS);
@@ -321,115 +332,115 @@ public class SrmReleaseFiles {
         srmReleaseFilesResponse.setArrayOfFileStatuses(
                                 new ArrayOfTSURLReturnStatus(surlReturnStatusArray));
         return srmReleaseFilesResponse;
-     
+
     }
-   
-    private void unpinFilesDirectlyBySURLs(final URI[] surls, Map<URI,TSURLReturnStatus> surlsMap ) {
-        TSURLReturnStatus[] surlReturnStatusArray = 
+
+    private void unpinFilesDirectlyBySURLs(URI[] surls, Map<URI,TSURLReturnStatus> surlsMap) {
+        TSURLReturnStatus[] surlReturnStatusArray =
             new TSURLReturnStatus[surls.length];
         int failure_num=0;
         for (URI surl:surls) {
            TSURLReturnStatus rs=surlsMap.get(surl);
             try {
-                BringOnlineFileRequest.unpinBySURL(storage,
-                    user,surl.toString());
+                BringOnlineFileRequest.unpinBySURL(storage, user,surl);
                 rs.setStatus(
                     new TReturnStatus(TStatusCode.SRM_SUCCESS,"released"));
             }
             catch(Exception e) {
                 logger.warn(e.toString());
-                //if rs status is TStatusCode.SRM_INTERNAL_ERROR 
-                // this means it was not changed since 
+                //if rs status is TStatusCode.SRM_INTERNAL_ERROR
+                // this means it was not changed since
                 // it is set initially in the calling function
-                // if it chanded, we do not want to override it 
-                // as other method of releasing might have already 
+                // if it chanded, we do not want to override it
+                // as other method of releasing might have already
                 // succeded
-            
+
                 if(rs.getStatus().getStatusCode().equals(TStatusCode.SRM_INTERNAL_ERROR)) {
                     rs.setStatus(
                         new TReturnStatus(TStatusCode.SRM_FAILURE,"release failed: "+e));
                 }
             }
         }
-        
+
     }
 
-    private void releaseFileRequestsDirectlyBySURLs(final URI[] surls,
-        Map<URI,TSURLReturnStatus> surlsMap) 
-        throws java.sql.SQLException, 
+    private void releaseFileRequestsDirectlyBySURLs(URI[] surls,
+        Map<URI,TSURLReturnStatus> surlsMap)
+        throws java.sql.SQLException,
         IllegalStateTransition,
-        SRMInvalidRequestException {
-        Set<BringOnlineFileRequest> bofrsToRelease = 
+        SRMInvalidRequestException
+   {
+        Set<BringOnlineFileRequest> bofrsToRelease =
             findBringOnlineFileRequestBySURLs(surls);
        for (BringOnlineFileRequest fileRequest: bofrsToRelease) {
-            
+
             TSURLReturnStatus release_rs = fileRequest.releaseFile();
             if(release_rs.getStatus().getStatusCode().equals(TStatusCode.SRM_SUCCESS) ) {
-                surlsMap.put(release_rs.getSurl(),release_rs);
+                surlsMap.put(fileRequest.getSurl(), release_rs);
             } else {
                 TSURLReturnStatus rs = surlsMap.get(release_rs.getSurl());
-                
-                //if rs status is TStatusCode.SRM_INTERNAL_ERROR 
-                // this means it was not changed since 
+
+                //if rs status is TStatusCode.SRM_INTERNAL_ERROR
+                // this means it was not changed since
                 // it is set initially in the calling function
-                // if it chanded, we do not want to override it 
-                // as other method of releasing might have already 
+                // if it chanded, we do not want to override it
+                // as other method of releasing might have already
                 // succeded
-            
+
                 if(rs.getStatus().getStatusCode().equals(TStatusCode.SRM_INTERNAL_ERROR)) {
-                    surlsMap.put(release_rs.getSurl(),release_rs);
+                    surlsMap.put(fileRequest.getSurl(),release_rs);
                 }
-                
+
             }
         }
-       
-       Set<GetFileRequest> gfrToRelease = 
+
+       Set<GetFileRequest> gfrToRelease =
             findGetFileRequestBySURLs(surls);
        for (GetFileRequest fileRequest: gfrToRelease) {
             fileRequest.setState(State.DONE,"SrmReleaseFiles called");
             TSURLReturnStatus surlReturnStatus =  fileRequest.getTSURLReturnStatus();
             if(surlReturnStatus.getStatus().getStatusCode() == TStatusCode.SRM_RELEASED) {
                 surlReturnStatus.getStatus().setStatusCode(TStatusCode.SRM_SUCCESS);
-                surlsMap.put(surlReturnStatus.getSurl(),surlReturnStatus);
+                surlsMap.put(fileRequest.getSurl(), surlReturnStatus);
             } else {
                 TSURLReturnStatus rs = surlsMap.get(surlReturnStatus.getSurl());
-                
-                //if rs status is TStatusCode.SRM_INTERNAL_ERROR 
-                // this means it was not changed since 
+
+                //if rs status is TStatusCode.SRM_INTERNAL_ERROR
+                // this means it was not changed since
                 // it is set initially in the calling function
-                // if it chanded, we do not want to override it 
-                // as other method of releasing might have already 
+                // if it chanded, we do not want to override it
+                // as other method of releasing might have already
                 // succeded
-            
+
                 if(rs.getStatus().getStatusCode().equals(TStatusCode.SRM_INTERNAL_ERROR)) {
-                    surlsMap.put(surlReturnStatus.getSurl(),surlReturnStatus);
+                    surlsMap.put(fileRequest.getSurl(), surlReturnStatus);
                 }
-                
+
             }
         }
-            
+
     }
-    
+
     private Set<BringOnlineFileRequest> findBringOnlineFileRequestBySURLs(URI[] surls) {
         Scheduler scheduler =
                 SchedulerFactory.getSchedulerFactory().
                 getScheduler(BringOnlineFileRequest.class);
-        Set<BringOnlineFileRequest> foundRequests = 
+        Set<BringOnlineFileRequest> foundRequests =
             new HashSet<BringOnlineFileRequest>();
-        JobStorage js = 
+        JobStorage js =
                 JobStorageFactory.getJobStorageFactory().getJobStorage(BringOnlineFileRequest.class);
         if(js instanceof DatabaseFileRequestStorage) {
             DatabaseFileRequestStorage reqstorage =(DatabaseFileRequestStorage) js;
             Set<Long> activeRequestIds ;
             try {
-                activeRequestIds = 
+                activeRequestIds =
                    reqstorage.getActiveFileRequestIds(scheduler.getId());
             } catch (java.sql.SQLException sqle) {
                 logger.warn(sqle.toString());
                 //just return empty
                 return foundRequests;
             }
-        
+
             for(Long requestId:activeRequestIds) {
                 Job job;
                 try {
@@ -442,8 +453,8 @@ public class SrmReleaseFiles {
                     continue;
                 }
                 BringOnlineFileRequest bofr = (BringOnlineFileRequest)job;
-                for(URI surl: surls) { 
-                    if(bofr.getSurlString().equals(surl.toString())) {
+                for(URI surl: surls) {
+                    if(bofr.getSurl().equals(surl)) {
                         foundRequests.add(bofr);
                     }
                 }
@@ -451,10 +462,10 @@ public class SrmReleaseFiles {
         }
         return foundRequests;
     }
-    
+
     private Set<GetFileRequest> findGetFileRequestBySURLs(URI[] surls)  {
         Scheduler scheduler = srm.getGetRequestScheduler();
-        Set<GetFileRequest> foundRequests = 
+        Set<GetFileRequest> foundRequests =
             new HashSet<GetFileRequest>();
         JobStorage js =
                 JobStorageFactory.getJobStorageFactory().getJobStorage(GetFileRequest.class);
@@ -463,15 +474,15 @@ public class SrmReleaseFiles {
                    (DatabaseFileRequestStorage) js;
         Set<Long> activeRequestIds ;
         try {
-            activeRequestIds = 
+            activeRequestIds =
                 reqstorage.getActiveFileRequestIds(scheduler.getId());
         } catch (java.sql.SQLException sqle) {
             logger.warn(sqle.toString());
             //just return empty
             return foundRequests;
         }
-        
-        
+
+
         for(Long requestId:activeRequestIds) {
             Job job;
             try {
@@ -484,8 +495,8 @@ public class SrmReleaseFiles {
                 continue;
             }
             GetFileRequest gfr = (GetFileRequest)job;
-            for(URI surl: surls) { 
-                if(gfr.getSurlString().equals(surl.toString())) {
+            for(URI surl: surls) {
+                if(gfr.getSurl().equals(surl)) {
                     foundRequests.add(gfr);
                 }
             }
@@ -494,5 +505,5 @@ public class SrmReleaseFiles {
         return foundRequests;
     }
 
-    
+
 }
